--- a/TP_IGL_Front-end/package.json
+++ b/TP_IGL_Front-end/package.json
@@ -18,8 +18,7 @@
     "react-router-dom": "^6.21.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "tailwindcss": "^3.3.6"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -31,7 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.0",
     "vite": "^5.0.8"
   }
 }
