--- a/TP_IGL_Front-end/package.json
+++ b/TP_IGL_Front-end/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.2",
+    "json-server": "^1.0.0-alpha.17",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.0",
+    "react-router-dom": "^6.21.2",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
