--- a/TP_IGL_Front-end/package.json
+++ b/TP_IGL_Front-end/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.6",
     "tailwindcss-gradient": "^1.0.1"
