--- a/TP_IGL_Front-end/package.json
+++ b/TP_IGL_Front-end/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "searchengine",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "proxy": "http://127.0.0.1:8000",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.6.5",
-    "bootstrap": "^5.3.2",
-    "flowbite": "^2.2.0",
-    "flowbite-react": "^0.7.2",
-    "json-server": "^1.0.0-alpha.17",
-    "react": "^18.2.0",
-    "react-datepicker": "^4.25.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.22.0",
-    "react-scroll": "^1.9.0",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "tailwindcss": "^3.3.6",
-    "tailwindcss-gradient": "^1.0.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.0.12"
-  }
+    "name": "searchengine",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "proxy": "http://127.0.0.1:8000",
+    "scripts": {
+        "dev": "vite --port 3000",
+        "build": "vite build",
+        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "axios": "^1.6.5",
+        "bootstrap": "^5.3.2",
+        "flowbite": "^2.2.0",
+        "flowbite-react": "^0.7.2",
+        "json-server": "^1.0.0-alpha.17",
+        "react": "^18.2.0",
+        "react-datepicker": "^4.25.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.12.0",
+        "react-router-dom": "^6.22.0",
+        "react-scroll": "^1.9.0",
+        "react-slick": "^0.29.0",
+        "react-toastify": "^10.0.4",
+        "slick-carousel": "^1.8.1",
+        "tailwindcss": "^3.3.6",
+        "tailwindcss-gradient": "^1.0.1"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.43",
+        "@types/react-dom": "^18.2.17",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.55.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "postcss": "^8.4.32",
+        "tailwindcss": "^3.4.0",
+        "vite": "^5.0.12"
+    }
 }
